[package]
name = "dpg"
version = "0.1.0"
edition = "2021"




[[bin]]
name = "dpg-view"
path = "bin/main.rs"


[[bin]]
name = "dpg-sim"
path = "bin/sim.rs"




[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
image = "0.24.7"
tempfile = "3.8.1"
indicatif = "0.17.7"
num = "0.4.1"
imageproc = "0.23.0"
rusttype = "0.9.3"
embedded-graphics = "0.8.1"
priority-queue = "1.3.2"
pathfinding = "4.3.3"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
